# meetkai

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_PLAN.md  Dockerfile  README.md  STYLEGUIDE.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
docker/: lightrag-pg-init.sql  morphik.toml
docker/waha-patches/: Utils.js  session.webjs.core.js
docs/templates/: authoring.md
scripts/: check_epaper_deps.py  setup_epaper.sh  setup_media.sh  test_structured_output.py
scripts/test_media/: test_image_base64.py  test_image_url.py  test_voice.py
src/kai/: __init__.py  cli.py  runs.py
src/kai/agent/: __init__.py  context.py  core.py  goal.py  helpers.py  scheduler.py
src/kai/bots/: __init__.py  base.py  processing.py
src/kai/brain/: __init__.py  client.py  config.py  crawler.py  validation.py
src/kai/cli/: __init__.py  bot.py  cockpit.py  connection.py  deployment.py  style.py  templates.py
src/kai/cockpit/: app.py  auth.py  auth_backends.py  bots.py  brains.py  calcom_connections.py  cli_helpers.py  config_writer.py  connection_probe.py  connections.py  database_connections.py  db.py  deployments.py  email_connections.py  flash.py  key_rotation.py  mailer.py  media_services.py  models.py  naming.py  secrets.py  service_health.py  settings.py  smtp_connections.py  tokens.py  webhooks.py
src/kai/config/: filters.py  prompts.py  settings.py
src/kai/logging/: logger.py
src/kai/media/: kokoro_server.py
src/kai/templates/: __init__.py  (+2 more)
templates/_tools/: mandatory.md
tests/: conftest.py  test_agent.py  test_bot_registry.py  test_bots_templates.py  test_bots_wiring.py  test_cli.py  test_cli_templates.py  test_conversation_tools.py  test_docs_fresh.py  test_escalate.py  test_filters.py  test_goal.py  test_phase2_wiring.py  test_phase3_templates.py  test_prompts.py  test_pydantic_models.py  test_settings.py  test_tasks.py  test_template_resolver.py  test_template_tool_validity.py  test_templates.py  test_terminal.py  test_tools.py  test_vendors.py
tests/agent/: test_core_tool_logging.py
tests/cockpit/: conftest.py  helpers.py  test_attention_reason.py  test_auth_backends.py  test_bots_registry.py  test_brain_policy.py  test_brains_routes.py  test_brains_service.py  test_calcom_connections.py  test_chat_picker.py  test_chat_route.py  test_cli_cockpit.py  test_cli_deployment.py  test_cli_start_user.py  test_config_writer.py  test_connection_catalog.py  test_connection_model.py  test_connections_service.py  test_database_connections.py  test_db_models.py  test_deployments_service.py  test_deployments_spawn.py  test_email_bot.py  test_email_connection_service.py  test_entitlements.py  test_escalations_route.py  test_ingress_route.py  test_integration.py  test_key_rotation.py  test_naming.py  test_secrets.py  test_smtp_connections.py  test_start_env_injection.py  test_template_tools.py  test_tokens.py  test_ui_consistency.py  test_webhook_freshness.py  test_webhook_ingress.py  test_wizard.py
(+187 files in other folders)
