[project]
name = "kai"
version = "0.0.1"
description = "Hackable Python framework for webhook-driven LLM bots"
authors = [
    { name = "Malvavisc0", email = "207609879+malvavisc0@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn",
    "httpx",
    "llama-index-llms-openai-like",
    "pydantic",
    "rich",
    "pydantic-settings",
    "pillow",
    "ddgs",
    "markdownify",
    "markdown-it-py",
    "curl-cffi",
    "beautifulsoup4",
    "jinja2",
    "python-multipart",
    "sqlalchemy",
    "itsdangerous",
    "cryptography",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "ruff",
]

[project.scripts]
kai = "kai.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kai"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"

[tool.pyright]
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyright",
    "respx",
    "ruff",
    "httpx2",
]
